@@ -1,3 +1,10 @@
+2011-11-20  Mark Ellis  <mark@mpellis.org.uk>
+
+	* changed some of build system to more resemble other
+	  synce packages
+	* librapi2 has been merged into libsynce in synce-core, drop
+	  separate build dependency on it
+
 Changelog
 
 0.4.6 - 2009/07/16
